--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+  <a href="https://gray-bush-0b32a8103.azurestaticapps.net/" target="_blank">
+  Click here to see the app online deployed with Azure Static Web Apps</a>
 </p>
